; ModuleID = '/home/carl/AnghaBench/php-src/ext/pcre/pcre2lib/sljit/extr_sljitNativeTILEGX_64.c_insert_nop.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/pcre/pcre2lib/sljit/extr_sljitNativeTILEGX_64.c_insert_nop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i64, i64, i32, %struct.tilegx_opcode* }
%struct.tilegx_opcode = type { i32 }

@inst_buf = common dso_local global %struct.TYPE_4__* null, align 8
@inst_buf_index = common dso_local global i32 0, align 4
@tilegx_opcodes = common dso_local global %struct.tilegx_opcode* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @insert_nop(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.tilegx_opcode*, align 8
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  store %struct.tilegx_opcode* null, %struct.tilegx_opcode** %5, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** @inst_buf, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i64 1
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** @inst_buf, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i64 0
  %10 = load i32, i32* @inst_buf_index, align 4
  %11 = sext i32 %10 to i64
  %12 = mul i64 %11, 40
  %13 = trunc i64 %12 to i32
  %14 = call i32 @memmove(%struct.TYPE_4__* %7, %struct.TYPE_4__* %9, i32 %13)
  %15 = load %struct.tilegx_opcode*, %struct.tilegx_opcode** @tilegx_opcodes, align 8
  %16 = load i64, i64* %3, align 8
  %17 = getelementptr inbounds %struct.tilegx_opcode, %struct.tilegx_opcode* %15, i64 %16
  store %struct.tilegx_opcode* %17, %struct.tilegx_opcode** %5, align 8
  %18 = load %struct.tilegx_opcode*, %struct.tilegx_opcode** %5, align 8
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** @inst_buf, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i64 0
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 4
  store %struct.tilegx_opcode* %18, %struct.tilegx_opcode** %21, align 8
  %22 = load %struct.tilegx_opcode*, %struct.tilegx_opcode** %5, align 8
  %23 = call i32 @get_any_valid_pipe(%struct.tilegx_opcode* %22)
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** @inst_buf, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i64 0
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 3
  store i32 %23, i32* %26, align 8
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** @inst_buf, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i64 0
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 2
  store i64 0, i64* %29, align 8
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** @inst_buf, align 8
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i64 0
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 1
  store i64 0, i64* %32, align 8
  %33 = load i32, i32* %4, align 4
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** @inst_buf, align 8
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i64 0
  %36 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %35, i32 0, i32 0
  store i32 %33, i32* %36, align 8
  %37 = load i32, i32* @inst_buf_index, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* @inst_buf_index, align 4
  ret void
}

declare dso_local i32 @memmove(%struct.TYPE_4__*, %struct.TYPE_4__*, i32) #1

declare dso_local i32 @get_any_valid_pipe(%struct.tilegx_opcode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
